--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Document</title>
 
     <!-- font-family -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="./Do-An-java24/lib/fontawesome/css/brands.css">
@@ -104,12 +108,41 @@
                 <div class="collections-content">
                     
                     <p class="header-content">Collections</p>
+
+                    <div class="paragraph">
+                        <p>You Can Explore And Shop Many Different Collection From Various Brands Here.</p>
+                    </div>
+
+                    <a href="#">
+                        <div class="shop-now">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            <p>Shop Now</p>
+                        </div>
+                    </a>
             
+                </div>
+
+                <div class="collections-img">
+                    <div class="border">
+                        <img src="./Do-An-java24/assets/images/collections.png" alt="">
+                    </div>
                 </div>
             </div>
 
         </div>
 
+    </div>
+
+    <div class="brands-and-products">
+        <div class="container">
+            <div class="brands">
+                <img src="./Do-An-java24/assets/images/brand1.png" alt="">
+                <img src="./Do-An-java24/assets/images/brand2.png" alt="">
+                <img src="./Do-An-java24/assets/images/brand3.png" alt="">
+                <img src="./Do-An-java24/assets/images/brand4.png" alt="">
+                <img src="./Do-An-java24/assets/images/brand5.png" alt="">
+            </div>
+        </div>
     </div>
 
 </body>
