--- a/index.html
+++ b/index.html
@@ -133,14 +133,66 @@
 
     </div>
 
-    <div class="brands-and-products">
-        <div class="container">
-            <div class="brands">
-                <img src="./Do-An-java24/assets/images/brand1.png" alt="">
-                <img src="./Do-An-java24/assets/images/brand2.png" alt="">
-                <img src="./Do-An-java24/assets/images/brand3.png" alt="">
-                <img src="./Do-An-java24/assets/images/brand4.png" alt="">
-                <img src="./Do-An-java24/assets/images/brand5.png" alt="">
+    <div class="center-main">
+        <div class="brands-and-products">
+            <div class="container">
+                <div class="brands">
+                    <img src="./Do-An-java24/assets/images/brand1.png" alt="">
+                    <img src="./Do-An-java24/assets/images/brand2.png" alt="">
+                    <img src="./Do-An-java24/assets/images/brand3.png" alt="">
+                    <img src="./Do-An-java24/assets/images/brand4.png" alt="">
+                    <img src="./Do-An-java24/assets/images/brand5.png" alt="">
+                </div>
+                
+                <div class="hot-products">
+                    <p>EXPLORE NEW AND POPULAR STYLES</p>
+                    <div class="hot1">
+                        <img src="./Do-An-java24/assets/images/hot1.png" alt="">
+                    </div>
+                    <div class="hot-category">
+                        <ul class="row1">
+                            <li>
+                                <img src="./Do-An-java24/assets/images/hot2.png" alt="">
+                            </li>
+                            <li>
+                                <img src="./Do-An-java24/assets/images/hot3.png" alt="">
+                            </li>
+                        </ul>
+                        <ul class="row2">
+                            <li>
+                                <img src="./Do-An-java24/assets/images/hot4.png" alt="">
+                            </li>
+                            <li>
+                                <img src="./Do-An-java24/assets/images/hot5.png" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="grid-products">
+                    <div class="product-title">
+                        <h2>Or Subscribe To The Newsletter</h2>
+                    </div>
+                    <div class="top-grid-products">
+                        <ul class="menu">
+                            <li>
+                                <h6>All Products</h6>
+                            </li>
+                            <li>
+                                <a href="#">T-Shirt</a>
+                            </li>
+                            <li>
+                                <a href="#">Hoodies</a>
+                            </li>
+                            <li>
+                                <a href="#">Jacket</a>
+                            </li>
+                        </ul>
+                        <div>
+                            <a href="#"><img src="./Do-An-java24/assets/images/filter.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
