--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
     <!-- fontawesome -->
     <link rel="stylesheet" href="./Do-An-java24/lib/fontawesome/css/brands.css">
     <link rel="stylesheet" href="./Do-An-java24/lib/fontawesome/css/fontawesome.css">
@@ -173,7 +177,7 @@
                     <div class="product-title">
                         <h2>Or Subscribe To The Newsletter</h2>
                     </div>
-                    <div class="top-grid-products">
+                    <div class="top-menu-products">
                         <ul class="menu">
                             <li>
                                 <h6>All Products</h6>
@@ -189,8 +193,115 @@
                             </li>
                         </ul>
                         <div>
-                            <a href="#"><img src="./Do-An-java24/assets/images/filter.png" alt=""></a>
+                            <a href="#">
+                                <div class="filter">
+                                    <img class="icon-filter" src="./Do-An-java24/assets/images/icon-filter.png" alt="">
+                                    <img class="text-filter" src="./Do-An-java24/assets/images/filter.png" alt="">
+                                </div>
+                            </a>
                         </div>
+                    </div>
+
+                    <div class="products">
+                        <div class="row">
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card1.png" alt="">
+                                </a>
+                            </div>
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card2.png" alt="">
+                                </a>
+                            </div>
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card3.png" alt="">
+                                </a>
+                            </div>
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card4.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="row2">
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card5.png" alt="">
+                                </a>
+                            </div>
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card6.png" alt="">
+                                </a>
+                            </div>
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card7.png" alt="">
+                                </a>
+                            </div>
+                            <div class="column-4">
+                                <a href="#">
+                                    <img src="./Do-An-java24/assets/images/card8.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="zara">
+            <div>
+                <img src="./Do-An-java24/assets/images/zara.png" alt="">
+            </div>
+            <div class="zara1">
+                <img src="./Do-An-java24/assets/images/zara1.png" alt="">
+            </div>
+            <div class="zara2">
+                <img src="./Do-An-java24/assets/images/zara2.png" alt="">
+            </div>
+            <div class="text">
+                <p>Lustrous Yet Understated. The New Evening Wear Collection Exclusively Offered At The Reopened Giorgio Armani Boutique In Los Angeles.</p>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="see-collection">
+                        <img src="./Do-An-java24/assets/images/see-collection.png" alt="">
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="container">
+                <div class="best-sellers">
+                    <h2>Best Sellers</h2>
+                </div>
+
+                <div class="top-menu-products">
+                    <ul class="menu">
+                        <li>
+                            <h6>All Products</h6>
+                        </li>
+                        <li>
+                            <a href="#">T-Shirt</a>
+                        </li>
+                        <li>
+                            <a href="#">Hoodies</a>
+                        </li>
+                        <li>
+                            <a href="#">Jacket</a>
+                        </li>
+                    </ul>
+                    <div>
+                        <a href="#">
+                            <div class="show-all">
+                                <img class="icon-filter" src="./Do-An-java24/assets/images/showall.png" alt="">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
