--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- font-family -->
+    <!-- font family -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="./Do-An-java24/lib/fontawesome/css/brands.css">
     <link rel="stylesheet" href="./Do-An-java24/lib/fontawesome/css/fontawesome.css">
     <link rel="stylesheet" href="./Do-An-java24/lib/fontawesome/css/solid.css">
+
+    <!-- owl css -->
+    <link rel="stylesheet" href="./Do-An-java24/lib/OwlCarousel2/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="./Do-An-java24/lib/OwlCarousel2/assets/owl.theme.default.min.css">
 
     <!-- css -->
     <link rel="stylesheet" href="./Do-An-java24/assets/css/styles.css">
@@ -304,9 +308,45 @@
                         </a>
                     </div>
                 </div>
+
+                <!-- slide -->
+                <div class="slide-main">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <a href="#">
+                                <img src="./Do-An-java24/assets/images/slide1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./Do-An-java24/assets/images/slide2.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./Do-An-java24/assets/images/slide3.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./Do-An-java24/assets/images/slide4.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    
+                    <div class="left-angle"><img src="./Do-An-java24/assets/images/left-angle.png" alt=""></div>
+                    <div class="right-angle"><img src="./Do-An-java24/assets/images/right-angle.png" alt=""></div>
+                </div>
+
             </div>
         </div>
     </div>
 
+<!-- js lib:jquery -->
+<script src="./Do-An-java24/lib/jquery.min.js"></script>
+<!-- js owl -->
+<script src="./Do-An-java24/lib/OwlCarousel2/owl.carousel.min.js"></script>
+<!-- custom-owl.js -->
+<script src="./Do-An-java24/assets/js/custom-owl.js"></script>
 </body>
 </html>
