--- a/index.html
+++ b/index.html
@@ -340,6 +340,52 @@
 
             </div>
         </div>
+
+        <div class="follow">
+            <div class="container">
+                <div class="follow-title-1">
+                    <h2>Follow Products And Discounts On Instagram</h2>
+                </div>
+                <div class="ins">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="./Do-An-java24/assets/images/ins1.png" alt=""></a>
+                            <div class=""></div>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./Do-An-java24/assets/images/ins2.png" alt=""></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./Do-An-java24/assets/images/ins3.png" alt=""></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./Do-An-java24/assets/images/ins4.png" alt=""></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./Do-An-java24/assets/images/ins5.png" alt=""></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./Do-An-java24/assets/images/ins6.png" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="follow-title-2">
+                    <h2>Or Subscribe To The Newsletter</h2>
+                </div>
+                <div class="email">
+                    <div class="input">
+                        <input type="text" placeholder="   Email  Address...">
+                        <hr>
+                    </div>
+                    <div class="submit">
+                        <a href="#">
+                            <p>SUBMIT</p>    
+                            <hr>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 <!-- js lib:jquery -->
