--- a/index.html
+++ b/index.html
@@ -350,22 +350,33 @@
                     <ul>
                         <li>
                             <a href="#"><img src="./Do-An-java24/assets/images/ins1.png" alt=""></a>
-                            <div class=""></div>
+                            <div></div>
+                            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                         </li>
                         <li>
                             <a href="#"><img src="./Do-An-java24/assets/images/ins2.png" alt=""></a>
+                            <div></div>
+                            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                         </li>
                         <li>
                             <a href="#"><img src="./Do-An-java24/assets/images/ins3.png" alt=""></a>
+                            <div></div>
+                            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                         </li>
                         <li>
                             <a href="#"><img src="./Do-An-java24/assets/images/ins4.png" alt=""></a>
+                            <div></div>
+                            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                         </li>
                         <li>
                             <a href="#"><img src="./Do-An-java24/assets/images/ins5.png" alt=""></a>
+                            <div></div>
+                            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                         </li>
                         <li>
                             <a href="#"><img src="./Do-An-java24/assets/images/ins6.png" alt=""></a>
+                            <div></div>
+                            <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                         </li>
                     </ul>
                 </div>
@@ -383,6 +394,26 @@
                             <hr>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-main">
+        <div class="container">
+            <div class="footer-left">
+                <div class="logo">
+                    <img class="main-logo" src="./Do-An-java24/assets/images/CORAL.png" alt="">
+                    <img class="left" src="./Do-An-java24/assets/images/left.png" alt="">
+                    <img class="right" src="./Do-An-java24/assets/images/right.png" alt="">
+                </div>
+                <div class="footer-content">
+                    <p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua</p>
+                </div>
+                <div class="social">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
         </div>
