--- a/index.html
+++ b/index.html
@@ -413,7 +413,86 @@
                 <div class="social">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
                     <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+
+            <div class="footer-menu-1">
+                <h6>CATALOG</h6>
+                <ul>
+                    <li>
+                        <a href="#">Necklaces</a>
+                    </li>
+                    <li>
+                        <a href="#">Hoodies</a>
+                    </li>
+                    <li>
+                        <a href="#">Jewelry Box</a>
+                    </li>
+                    <li>
+                        <a href="#">T-Shirt</a>
+                    </li>
+                    <li>
+                        <a href="#">Jacket</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-menu-2">
+                <h6>ABOUT US</h6>
+                <ul>
+                    <li>
+                        <a href="#">Our Producers</a>
+                    </li>
+                    <li>
+                        <a href="#">Sitemap</a>
+                    </li>
+                    <li>
+                        <a href="#">FAQ</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms & Conditions</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-menu-3">
+                <h6>CUSTOMER SERVICES</h6>
+                <ul>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Track Your Order</a>
+                    </li>
+                    <li>
+                        <a href="#">Product Care & Repair</a>
+                    </li>
+                    <li>
+                        <a href="#">Book An Appointment</a>
+                    </li>
+                    <li>
+                        <a href="#">Shipping & Returns</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bot">
+            <div class="container">
+                <div class="footer-bot-left">
+                    <p>© 2022 Coral , Inc.</p>
+                </div>
+                <div class="footer-bot-center">
+                    <img src="./Do-An-java24/assets/images/payment.png" alt="">
+                </div>
+                <div class="footer-bot-right">
+                    <div>
+                        <a href="#"><img src="./Do-An-java24/assets/images/scroll-top.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
