--- a/index.html
+++ b/index.html
@@ -156,22 +156,52 @@
                     <p>EXPLORE NEW AND POPULAR STYLES</p>
                     <div class="hot1">
                         <img src="./Do-An-java24/assets/images/hot1.png" alt="">
+                        <div class="products-hover">
+                            <div>
+                                <span>Manto</span>
+                                <span>86 Product</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="hot-category">
                         <ul class="row1">
                             <li>
                                 <img src="./Do-An-java24/assets/images/hot2.png" alt="">
+                                <div class="products-hover">
+                                    <div>
+                                        <span>Pants</span>
+                                        <span>200 Product</span>
+                                    </div>
+                                </div>
                             </li>
                             <li>
                                 <img src="./Do-An-java24/assets/images/hot3.png" alt="">
+                                <div class="products-hover">
+                                    <div>
+                                        <span>Coat</span>
+                                        <span>520 Product</span>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                         <ul class="row2">
                             <li>
                                 <img src="./Do-An-java24/assets/images/hot4.png" alt="">
+                                <div class="products-hover">
+                                    <div>
+                                        <span>Shirt</span>
+                                        <span>320 Product</span>
+                                    </div>
+                                </div>
                             </li>
                             <li>
                                 <img src="./Do-An-java24/assets/images/hot5.png" alt="">
+                                <div class="products-hover">
+                                    <div>
+                                        <span>Jacket</span>
+                                        <span>103 Product</span>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -211,6 +241,15 @@
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card1.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                
+                                            </div>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                             <div class="column-4">
