--- a/index.html
+++ b/index.html
@@ -246,7 +246,10 @@
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-magnifying-glass"></i>
                                             <div>
-                                                
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
