--- a/index.html
+++ b/index.html
@@ -258,16 +258,55 @@
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card2.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card3.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card4.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="price-hover">
+                                            <p>$130.00</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -276,21 +315,72 @@
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card5.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card6.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="price-hover">
+                                            <p>$130.00</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card7.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                             <div class="column-4">
                                 <a href="#">
                                     <img src="./Do-An-java24/assets/images/card8.png" alt="">
+                                    <div>
+                                        <div class="shop-hover">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <div>
+                                                <div class="shop-now">
+                                                    <i class="fa-solid fa-bag-shopping"></i>
+                                                    <p>Shop Now</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -357,21 +447,75 @@
                         <div class="item">
                             <a href="#">
                                 <img src="./Do-An-java24/assets/images/slide1.png" alt="">
+                                <div>
+                                    <div class="shop-hover">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                        <div>
+                                            <div class="shop-now">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                                <p>Shop Now</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
                                 <img src="./Do-An-java24/assets/images/slide2.png" alt="">
+                                <div>
+                                    <div class="shop-hover">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                        <div>
+                                            <div class="shop-now">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                                <p>Shop Now</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
                                 <img src="./Do-An-java24/assets/images/slide3.png" alt="">
+                                <div>
+                                    <div class="shop-hover">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                        <div>
+                                            <div class="shop-now">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                                <p>Shop Now</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="price-hover">
+                                        <p>$130.00</p>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
                                 <img src="./Do-An-java24/assets/images/slide4.png" alt="">
+                                <div>
+                                    <div class="shop-hover">
+                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                        <div>
+                                            <div class="shop-now">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                                <p>Shop Now</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="price-hover">
+                                        <p>$130.00</p>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                     </div>
